syntax = "proto3";

package proto;

import "proto/character_type.proto";
import "proto/direction.proto";

message CharacterAttacked {
  string uuid = 1;
  float direction = 2;
}

message CharacterDamaged {
  string uuid = 1;
  float damage = 2;
  float hp = 3;
}

message CharacterDirectionUpdated {
  string uuid = 1;
  Direction facing_direction = 5;
  Direction moving_direction = 6;
}

message CharacterPositionUpdated {
  string uuid = 1;
  float x = 2;
  float y = 3;
  float dx = 7;
  float dy = 8;
}

message CharacterReloaded {
  string uuid = 1;
}

message CharacterUpdated {
  string uuid = 1;
  float x = 2;
  float y = 3;
  float dx = 7;
  float dy = 8;
  CharacterType character_type = 4;
  Direction facing_direction = 5;
  Direction moving_direction = 6;
  float hp = 9;
}
